<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/notes_add_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/notes_add_bar_title"
            android:textColor="#fff"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/notes_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:hint="@string/notes_add_title_hint"
        custom:met_floatingLabelTextColor="@color/blue_normal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/notes_add_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:hint="@string/notes_add_text_hint"
        custom:met_floatingLabelTextColor="@color/blue_normal" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/notes_add_submit_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:text="@string/notes_add_submit_text"
        android:textColor="#fff"
        android:textSize="18sp"
        custom:pb_colorComplete="#00ff00"
        custom:pb_colorNormal="#3F51B5"
        custom:pb_colorPressed="#3F51B5"
        custom:pb_colorProgress="#5487de"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading" />

</LinearLayout>